# meeting-transcriber-local

./: .gitignore  README.md  pyproject.toml  run_app.bat  run_app.ps1  run_app.sh
docs/: FUNCIONAMIENTO.md
scripts/: bootstrap.py
src/meeting_transcriber/: __main__.py  app_modes.py  audio.py  audio_normalization.py  audio_preview.py  benchmark.py  cancellation.py  cli.py  config.py  cuda_runtime.py  deepfilternet.py  diarization.py  diarization_models.py  diarization_quality.py  exporters.py  external_links.py  ffmpeg.py  gui.py  gui_theme.py  hf_auth.py  history.py  languages.py  pipeline.py  progress.py  runtime.py  simple_pipeline.py  simple_planner.py  simple_report.py  speaker_ai.py  speaker_compare.py  speaker_cross_compare.py  speaker_embedding_store.py  speaker_fingerprints.py  speaker_memory.py  (+7 more)
tests/: test_alignment.py  test_app_modes.py  test_audio_normalization.py  test_audio_preview.py  test_benchmark.py  test_bootstrap.py  test_config.py  test_deepfilternet.py  test_diarization.py  test_diarization_models.py  test_exporters.py  test_external_links.py  test_gui_layout.py  test_hf_auth.py  test_history.py  test_languages.py  test_offsets.py  test_progress.py  test_runtime.py  test_simple_pipeline.py  test_simple_planner.py  test_simple_report.py  test_speaker_ai.py  test_speaker_audio.py  test_speaker_compare.py  test_speaker_cross_compare.py  test_speaker_embedding_store.py  test_speaker_fingerprints.py  test_speaker_identity_resolver.py  test_speaker_memory.py  test_speaker_names.py  test_time_range.py  test_transcript_merge.py  test_whisper_models.py
(+5 files in other folders)
