[project]
name = "meeting-transcriber"
version = "0.1.0"
description = "Offline desktop app for meeting transcription with speaker diarization."
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "imageio-ffmpeg>=0.5.0",
    "pyannote.audio>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
